# urandom

./: Cargo.toml  faq.md  license.txt  readme.md
.github/workflows/: ci.yml
benches/: distr.rs  distributions.rs  rng.rs  seq.rs
benchmarks/rand/: Cargo.toml  readme.md
benchmarks/rand/benches/: chacha_rng.rs  small_rng.rs  uniform_int.rs
examples/: calculate_pi.rs  float_bias.rs  guess_the_number.rs  int_bias.rs
src/: distr.rs  distributions.rs  impls.rs  lib.rs  random.rs  rng.rs
src/distr/: alnum.rs  bernoulli.rs  dice.rs  exp.rs  exponential.rs  float01.rs  normal.rs  samples.rs  standard.rs  uniform.rs  ziggurat.rs  ziggurat_tables.rs
src/distr/exp/: tests.rs
src/distr/exponential/: tests.rs
src/distr/normal/: tests.rs
src/distr/uniform/: float.rs  int.rs  tests.rs
src/distributions/: alphanumeric.rs  bernoulli.rs  binomial.rs  choose.rs  dice.rs  float01.rs  samples.rs  standard.rs  uniform.rs
src/distributions/uniform/: float.rs  int.rs
src/rng/: block.rs  chacha.rs  chacha20.rs  entropy.rs  mock.rs  read.rs  splitmix64.rs  system.rs  tests.rs  util.rs  wyrand.rs  xoshiro256.rs
src/rng/chacha/: avx2.rs  inner.rs  scalar.rs  slp.rs  sse2.rs  tests.rs
src/rng/chacha20/: scalar.rs  slp.rs  x86.rs
