[package]
name = "urandom"
version = "0.2.3"
authors = [
	"Casper <CasualX@users.noreply.github.com>",
	"Developers of the Rand project",
	"The Rust Project Developers",
]
edition = "2021"
license = "MIT"

description = "Produce and consume randomness, to convert them to useful types and distributions, and some randomness-related algorithms."
documentation = "https://docs.rs/urandom/"
repository = "https://github.com/CasualX/urandom"
readme = "readme.md"
keywords = ["rand", "random", "rng"]
categories = ["algorithms", "no-std"]

[features]
default = ["getrandom", "std"]
std = []

[dependencies]
cfg-if = "1.0"
getrandom = { version = "0.2.9", optional = true }
dataview = { version = "~1.0", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
